--- a/src/assets/sass/main.css
+++ b/src/assets/sass/main.css
@@ -43,7 +43,7 @@ header h1 strong {
   color: #002fff;
   font-size: 35px;
   margin-bottom: 16px;
-  font-family: fantasy;
+  font-family: 'Times New Roman', Times, serif;
   
 }
 .content-wrap aside nav a {
