--- a/src/assets/sass/main.css
+++ b/src/assets/sass/main.css
@@ -149,3 +149,43 @@ header h1 strong {
 .app {
   margin-bottom: 90px;
 }
+
+/* Small screens (phones) */
+@media only screen and (max-width: 600px) {
+  /* Adjust the header padding and font size */
+  header {
+    padding-top: 30px;
+    padding-bottom: 20px;
+  }
+  header h1 {
+    font-size: 36px;
+    padding-left: 30px;
+  }
+  /* Adjust the sidebar and content-wrap layout */
+  .sidebar {
+    order: 2;
+  }
+  .content-wrap {
+    flex-direction: column;
+  }
+  .content-wrap aside {
+    max-width: 100%;
+    padding: 0 16px;
+    margin-bottom: 20px;
+  }
+  .content-wrap main {
+    padding: 0;
+  }
+  /* Adjust the search box input */
+  .content-wrap main .main-head .search-box input {
+    padding: 16px;
+    max-width: 100%;
+    border-radius: 50px;
+  }
+  /* Adjust the anime cards layout */
+  .content-wrap main .anime-list .anime-card {
+    flex: 1 1 50%;
+    max-width: 50%;
+    padding: 20px;
+  }
+}
