--- a/src/assets/sass/main.css
+++ b/src/assets/sass/main.css
@@ -1,24 +1,30 @@
 * {
+  justify-content: center;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Fira Sans", sans-serif;
+  background-color: f2f2f2;
 }
 
 header {
   padding-top: 50px;
   padding-bottom: 30px;
-  background-color: #ff4d0038;
+  background-color: #00000007;
+  justify-content: center;
 }
 header h1 {
-  color: #ff0303;
+  color: #ff5e00;
   font-size: 56px;
   font-weight: 500;
   text-align: center;
-  padding-left: 230px;
+  padding-left: 20px;
   margin: 0;
+  justify-content: center;
 }
+
 header h1 strong {
+  justify-content: center;
   color: #000000;
 }
 
@@ -40,9 +46,9 @@ header h1 strong {
   padding-right: 13px;
 }
 .content-wrap aside nav h3 {
-  color: #002fff;
-  font-size: 35px;
-  margin-bottom: 16px;
+  color: #1100ff;
+  font-size: 56px;
+  margin-top: 19px;
   font-family: 'Times New Roman', Times, serif;
   
 }
@@ -57,6 +63,7 @@ header h1 strong {
   text-align: left;
   text-decoration: none;
   transition: 0.2s;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 .content-wrap aside nav a:hover {
   background-color: #000000;
@@ -84,10 +91,10 @@ header h1 strong {
   border: none;
   display: block;
   width: 100%;
-  max-width: 400px;
-  padding: 26px;
+  max-width: 430px;
+  padding: 29px;
   border-radius: 999px;
-  background-color: #000000f9;
+  background-color: #000000;
   transition: 0.4s;
 }
 .content-wrap main .main-head .search-box input ::-moz-placeholder {
@@ -98,7 +105,7 @@ header h1 strong {
 }
 .content-wrap main .main-head .search-box input:focus, .content-wrap main .main-head .search-box input:valid {
   background-color: #000000;
-  color: #FFF;
+  color: #ffffff;
 }
 .content-wrap main .anime-list {
   display: flex;
@@ -126,17 +133,20 @@ header h1 strong {
   margin-bottom: 34px;
   -o-object-fit: cover;
   object-fit: contain;
-  border-radius: 55px;
+  border-radius: 200px;
   box-shadow: 0px 0px 0px rgba(224, 4, 4, 0.15);
   transition: 0.4s;
+  margin-left: 3px;
 }
 
 
 
 .content-wrap main .anime-list .anime-card h3 {
-  color: #1a1b1a;
+  color: #000000;
+  font-size: 24px;
 }
 .content-wrap main .anime-list .anime-card:hover figure img {
+  background-color: rgb(239, 217, 217);
   box-shadow: 10px 10px 12px rgba(255, 0, 255, 255);
   transform: scale(1.06);
 }/*# sourceMappingURL=main.css.map */
