--- a/src/assets/sass/main.css
+++ b/src/assets/sass/main.css
@@ -131,27 +131,25 @@ header h1 strong {
   flex: 1 1 0%;
 }
 .content-wrap main .main-head .search-box input {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  background: none;
-  outline: none;
-  border: none;
-  display: block;
-  width: 100%;
-  max-width: 430px;
-  padding: 29px;
-  border-radius: 999px;
-  background-color: #000000;
-  transition: 0.4s;
+  display: flex;
+  align-items: center;
+  background-color: rgb(191, 191, 191);
+  border-radius: 15px;
+  padding: 8px;
+  margin-bottom: 1.5em;
+  width: 890px;
+  height: 39px;
 }
 .content-wrap main .main-head .search-box input ::-moz-placeholder {
+  border: none;
   color: #000000;
 }
 .content-wrap main .main-head .search-box input ::placeholder {
+  border: none;
   color: #000000;
 }
 .content-wrap main .main-head .search-box input:focus, .content-wrap main .main-head .search-box input:valid {
+  border: none;
   background-color: #000000;
   color: #ffffff;
 }
